--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,5 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
+basehandler.cpython-36.pyc
+sklearnhandlers.cpython-36.pyc
